syntax = "proto3";
option go_package = "github.com/JohnnyS318/RoyalAfgInGo/pkg/protos";

service UserService {
    rpc SaveUser(User) returns (User);
    rpc GetUserById (GetUser) returns (User);
    rpc GetUserByUsername (GetUser) returns (User);
    rpc UpdateUser(User) returns (User);
}

message User {
    string id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    string username = 4;
    string hash = 5;
    string email = 6;
    string fullName = 7;
    int64 birthdate = 8;
}


message GetUser {
    string api_key = 1;
    string identifier = 2;
}